k8s/collector/templates/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: collector-backend-auth
  namespace: default
spec:
  selector:
    matchLabels:
      serving.knative.dev/service: backend
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/collector"]
    to:
    - operation:
        ports: ["80"]
